--- a/chapter4-inprocess.tex
+++ b/chapter4-inprocess.tex
@@ -1,6 +1,8 @@
 \chapter{Fairness through regularization}
 \label{fairness_inproc}
 
+% the integrated approach or in-processing
+
 \todo[inline]{changing the title to in-processing methods to achieve fairness?}
 \todo[inline]{accuracy or utility or personalization in general?}
 
@@ -318,7 +320,6 @@ A key aspect of this extension is to note the tension between a personalized vie
 
 % Another important area of research is to extend our measures of fairness. The additive measures used in this paper capture an aggregate representation of how recommendation results are changing for user and provider groups generally, but they do not permit fine-grained analysis of the tradeoffs experienced by individual users or providers. We do not know, for example, if the results of our Kiva.org experiments represent a Pareto improvement in system performance or just an average improvement over the stakeholder groups, and whether some subgroups are impacted more than others.
 
-% One of the key challenges in this area is the domain-specificity of recommendation environments. The utilities that are delivered to each class of stakeholder are highly dependent on the type of item being recommended, the social function of the platform, and the interactions that it enables. It is therefore difficult to find appropriate data sets for experimentation and challenging to generalize across recommendation scenarios. 
-
+% One of the key challenges in this area is the domain-specificity of recommendation environments. The utilities that are delivered to each class of stakeholder are highly dependent on the type of item being recommended, the social function of the platform, and the interactions that it enables. It is therefore difficult to find appropriate data sets for experimentation and challenging to generalize across recommendation scenarios.
 
 \todo[inline]{connect it to the post-processing section. Provide an argument here why we relied on post-processing approaches etc.}
