--- a/chapter5-postprocess.tex
+++ b/chapter5-postprocess.tex
@@ -1,9 +1,16 @@
 \chapter{Fairness through post-processing}
 \label{fairness_postproc}
 
+\todo[inline]{I think it's better to break it into different mini chapters but write a page explaining these methods briefly and how they are connected maybe.}
 % \section{baseline rerankers}
 % \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
-% \section{FAR/PFAR}
-% \section{OFAIR}
-% \section{SCRUF}
+
+\section{FAR/PFAR}
+    % \input chapter5-farpfar.tex
+
+\section{OFAIR}
+    % \input chapter5-ofair.tex
+    
+\section{SCRUF}
+    \input chapter5-dynamicfair.tex
 %     (provider fairness)
