--- a/refs.bib
+++ b/refs.bib
@@ -1387,6 +1387,13 @@ url = {http://EconPapers.repec.org/RePEc:net:wpaper:0710}
   publisher={ACM}
 }
 
+@book{o2016weapons,
+  title={Weapons of math destruction: How big data increases inequality and threatens democracy},
+  author={O'neil, Cathy},
+  year={2016},
+  publisher={Crown}
+}
+
 @inproceedings{nieder?e2004multi,
   title={A multi-dimensional, unified user model for cross-system personalization},
   author={Nieder{\'e}e, C. and Stewart, A. and Mehta, B. and Hemmje, M.},
@@ -1508,6 +1515,107 @@ inproceedings{miniouser,
   pages={48},
   year={1998}
 }
+
+@inproceedings{Lihong2010bandit,
+author = {Li, Lihong and Chu, Wei and Langford, John and Schapire, Robert E.},
+title = {A Contextual-Bandit Approach to Personalized News Article Recommendation},
+year = {2010},
+isbn = {9781605587998},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1772690.1772758},
+doi = {10.1145/1772690.1772758},
+booktitle = {Proceedings of the 19th International Conference on World Wide Web},
+pages = {661–670},
+numpages = {10},
+location = {Raleigh, North Carolina, USA},
+series = {WWW '10}
+}
+
+@inproceedings{Zheng2018DRN,
+author = {Zheng, Guanjie and Zhang, Fuzheng and Zheng, Zihan and Xiang, Yang and Yuan, Nicholas Jing and Xie, Xing and Li, Zhenhui},
+title = {DRN: A Deep Reinforcement Learning Framework for News Recommendation},
+year = {2018},
+isbn = {9781450356398},
+publisher = {International World Wide Web Conferences Steering Committee},
+address = {Republic and Canton of Geneva, CHE},
+url = {https://doi.org/10.1145/3178876.3185994},
+doi = {10.1145/3178876.3185994},
+booktitle = {Proceedings of the 2018 World Wide Web Conference},
+pages = {167–176},
+numpages = {10},
+location = {Lyon, France},
+series = {WWW '18}
+}
+
+
+@inproceedings{Chaney2018Homo,
+author = {Chaney, Allison J. B. and Stewart, Brandon M. and Engelhardt, Barbara E.},
+title = {How Algorithmic Confounding in Recommendation Systems Increases Homogeneity and Decreases Utility},
+year = {2018},
+isbn = {9781450359016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3240323.3240370},
+doi = {10.1145/3240323.3240370},
+booktitle = {Proceedings of the 12th ACM Conference on Recommender Systems},
+pages = {224–232},
+numpages = {9},
+location = {Vancouver, British Columbia, Canada},
+series = {RecSys '18}
+}
+
+
+
+@InProceedings{pmlr-v81-ensign18a,
+  title = 	 {Runaway Feedback Loops in Predictive Policing},
+  author = 	 {Ensign, Danielle and Friedler, Sorelle A. and Neville, Scott and Scheidegger, Carlos and Venkatasubramanian, Suresh},
+  booktitle = 	 {Proceedings of the 1st Conference on Fairness, Accountability and Transparency},
+  pages = 	 {160--171},
+  year = 	 {2018},
+  editor = 	 {Friedler, Sorelle A. and Wilson, Christo},
+  volume = 	 {81},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {23--24 Feb},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v81/ensign18a/ensign18a.pdf},
+  url = 	 {https://proceedings.mlr.press/v81/ensign18a.html},
+}
+
+
+
+@inproceedings{NEURIPS2019_7690dd4d,
+ author = {Zhang, Xueru and Khaliligarekani, Mohammadmahdi and Tekin, Cem and liu, mingyan},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Group Retention when Using Machine Learning in Sequential Decision Making: the Interplay between User Dynamics and Fairness},
+ url = {https://proceedings.neurips.cc/paper/2019/file/7690dd4db7a92524c684e3191919eb6b-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+
+
+
+@InProceedings{pmlr-v80-hashimoto18a,
+  title = 	 {Fairness Without Demographics in Repeated Loss Minimization},
+  author =       {Hashimoto, Tatsunori and Srivastava, Megha and Namkoong, Hongseok and Liang, Percy},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {1929--1938},
+  year = 	 {2018},
+  editor = 	 {Dy, Jennifer and Krause, Andreas},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v80/hashimoto18a/hashimoto18a.pdf},
+  url = 	 {https://proceedings.mlr.press/v80/hashimoto18a.html},
+}
+
+
+
+
 
 @inproceedings{chien1999bayesian,
   title={A bayesian model for collaborative filtering},
@@ -3121,6 +3229,27 @@ ISSN={1083-4427},}
   pages     = {213-216},
   ee        = {http://doi.acm.org/10.1145/1639714.1639751},
   bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{sonboli2020dynm,
+  title={''And the Winner Is...'': Dynamic Lotteries for Multi-group Fairness-Aware Recommendation},
+  author={Sonboli, Nasim and Burke, Robin and Mattei, Nicholas and Eskandanian, Farzad and Gao, Tian},
+  journal={arXiv preprint arXiv:2009.02590},
+  year={2020}
+  booktitle={3rd FAccTRec Workshop: Responsible Recommendation in conjunction with the 14th ACM Conference on Recommender Systems (RecSys 2020)}
+}
+
+@inbook{Sonboli2021transparency,
+author = {Sonboli, Nasim and Smith, Jessie J. and Cabral Berenfus, Florencia and Burke, Robin and Fiesler, Casey},
+title = {Fairness and Transparency in Recommendation: The Users’ Perspective},
+year = {2021},
+isbn = {9781450383660},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3450613.3456835},
+booktitle = {Proceedings of the 29th ACM Conference on User Modeling, Adaptation and Personalization},
+pages = {274–279},
+numpages = {6}
 }
 
 @inproceedings{DBLP:conf/sac/Castro-HerreraDCM09,
