--- a/main.tex
+++ b/main.tex
@@ -91,7 +91,7 @@
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{plain}	% or "siam", or "alpha", etc.
 \nocite{*}		% list all refs in database, cited or not
-\bibliography{refs,refs_libauto}		% Bib database in "refs.bib"
+\bibliography{refs,refs_libauto,proposal_refs}		% Bib database in "refs.bib"
 
 %%%%%%%%%   then the Appendices, if any   %%%%%%%%%
 \appendix
